<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_contact_map"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintStart_toStartOf="parent"
    tools:context=".ContactMapActivity">


    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentTop="true"
        android:tag="mapFragment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="407dp"
        android:layout_height="93dp"
        android:background="@color/navbar_background"
        android:elevation="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/imageButtonList"
            android:layout_width="91dp"
            android:layout_height="79dp"
            android:layout_marginEnd="69dp"
            android:layout_marginBottom="60dp"
            android:contentDescription="@string/button_to_display_a_list_of_contacts"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/clipart3436730"
            tools:ignore="RedundantDescriptionCheck" />

        <ImageButton
            android:id="@+id/imageButtonMap"
            android:layout_width="91dp"
            android:layout_height="79dp"
            android:layout_marginEnd="52dp"
            android:layout_marginBottom="56dp"
            android:contentDescription="@string/button_to_view_contact_s_address"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/clipart10350" />

        <ImageButton
            android:id="@+id/imageButtonSettings"
            android:layout_width="0dp"
            android:layout_height="79dp"
            android:layout_weight="1"
            android:contentDescription="@string/button_to_go_to_settings"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/clipart100754"
            tools:ignore="RedundantDescriptionCheck" />

    </LinearLayout>

    <RadioGroup
        android:id="@+id/radioGroupMapType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/map">

        <RadioButton
            android:id="@+id/radioButtonNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Normal" />

        <RadioButton
            android:id="@+id/radioButtonSatellite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Satellite" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textHeading"
        android:layout_marginTop="16dp"
        android:text="WNW"
        app:layout_constraintEnd_toEndOf="@+id/map"
        app:layout_constraintStart_toStartOf="@id/map"
        app:layout_constraintTop_toTopOf="@id/map" />


</androidx.constraintlayout.widget.ConstraintLayout>


